--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   },
   "dependencies": {
     "@clerk/nextjs": "^6.20.2",
+    "@elevenlabs/react": "^0.1.6",
+    "@google-cloud/text-to-speech": "^6.1.0",
     "@google/genai": "^1.4.0",
     "@neondatabase/serverless": "^1.0.0",
     "@radix-ui/react-alert-dialog": "^1.1.14",
@@ -22,12 +24,14 @@
     "clsx": "^2.1.1",
     "dotenv": "^16.5.0",
     "drizzle-orm": "^0.44.1",
+    "firebase": "^11.9.0",
     "lucide-react": "^0.512.0",
     "mime": "^4.0.7",
     "next": "15.3.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "tailwind-merge": "^3.3.0"
+    "tailwind-merge": "^3.3.0",
+    "uuid": "^11.1.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
