--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@elevenlabs/react": "^0.1.6",
     "@google-cloud/text-to-speech": "^6.1.0",
     "@google/genai": "^1.4.0",
+    "@huggingface/inference": "^4.0.2",
     "@neondatabase/serverless": "^1.0.0",
     "@radix-ui/react-alert-dialog": "^1.1.14",
     "@radix-ui/react-select": "^2.2.5",
