--- a/package.json
+++ b/package.json
@@ -18,8 +18,10 @@
     "@huggingface/inference": "^4.0.2",
     "@neondatabase/serverless": "^1.0.0",
     "@radix-ui/react-alert-dialog": "^1.1.14",
+    "@radix-ui/react-dialog": "^1.1.14",
     "@radix-ui/react-select": "^2.2.5",
     "@radix-ui/react-slot": "^1.2.3",
+    "@remotion/cli": "4.0.314",
     "assemblyai": "^4.13.2",
     "axios": "^1.9.0",
     "class-variance-authority": "^0.7.1",
@@ -32,6 +34,7 @@
     "next": "15.3.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "remotion": "4.0.314",
     "tailwind-merge": "^3.3.0",
     "uuid": "^11.1.0"
   },
